# sshcfg

./: Cargo.toml  LICENSE  README.md
docs/: README.zh-CN.md  design-audit.md  implementation-plan.md
src/: main.rs
src/app/: cli.rs  mod.rs
src/app/commands/: add.rs  delete.rs  doctor.rs  duplicate.rs  edit.rs  init.rs  list.rs  meta.rs  mod.rs  order.rs  selection.rs  show.rs  template.rs  validate.rs
src/core/: mod.rs  model.rs  openssh.rs  parser.rs  render.rs  resolve.rs  root_config.rs  state.rs  store.rs  template.rs  validate.rs
src/fs/: backup.rs  layout.rs  mod.rs  writer.rs
src/tui/: app.rs  mod.rs  state.rs
src/tui/views/: detail.rs  host_list.rs  mod.rs
