[package]
name = "sshcfg"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
directories = "6.0"
glob = "0.3"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
